style.css
@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');

/* *{
    margin: 0;
    padding: 0;
} */

#main-hero{
width: 1440px;
height: 652px;
top: 131px;
background-image: url(assets/bg.png);
background-size: cover;
background-position: center;
}

.main-content{
    text-align: center;
    margin: 0 auto;
}
.title-i{
    font-size: 48px;
    color: rgb(13, 19, 33);
    font-weight: 800;
}
.content-p{
    font-size: 16px;
    font-weight: 400;
    color: rgb(13, 19, 33);
    
}

.button-style{
background-color: rgb(13, 19, 33);
color: rgb(255, 255, 255);
text-decoration: aqua;
width: 169px;
height: 55px;
}
.main-two{
    margin: 80px, 97px, 80px, 97px;
}
.title-w{
    text-align: center;
    color: rgb(13, 19, 33);
    font-size: 32px;
    font-weight: bold;

}
.title-d{
    text-align: center; 
    font-size: 16px;
    color: rgb(13, 19, 33);
}
.title-two{
    font-size: 24px;
    color: rgba(13, 19, 33, 0.7);
}

.main-three{
    display: flex;
    justify-content: space-evenly;
    margin: 80px 80px 97px 97px;
}
.btn-two{
    background-color: rgb(250, 252, 255);
    border-radius: none;
}
.img-three{
    width: 250px;
    height: 200;
}
.title-myi{
    color: rgb(13, 19, 33);
    font-size: 32px;
    font-weight: bold;
}
.title-myp{
    font-size: 16px;
    color: rgb(13, 19, 33);
}
.main-foure{
    text-align: center;
}
.mycurrentt{
    font-size: 32px;
    color: rgb(13, 19, 33);
    text-align: center;
    font-weight: bold;
}
.mycp{
    font-size: 16px;
    color: rgb(13, 19, 33);
    text-align: center;
}
.title-five{
    font-size: 24px;
    color: rgb(13, 19, 33);
}
.five-p{
    font-size: 16px;
    color: rgb(13, 19, 33);
}
.href-five{
    font-size: 16px;
    color: rgb(13, 19, 33);
    font-weight: bold
}
.img-five{
    width: 39.68px;
    height: 45px;
}
.five-main{
    display: flex;
    justify-content: space-evenly;

}
.target-one{
    background-color: rgba(255, 76, 30, 0.05);
    width: 300px;
    height: 300px;
    border-radius: 10px;   
}
.target-two{
    background-color: rgba(0, 76, 232, 0.05);
    width: 300px;
    height: 300px;
    border-radius: 10px;
}
.target-three{
    background-color: rgba(255, 223, 0, 0.05);
    width: 300px;
    height: 300px;
    border-radius: 10px;
}
.final-title{
    font-size: 20px;
    color: rgb(13, 19, 33);
}
.foter-final{
    display: flex;
    justify-content: space-between;
    margin: 32px 150px 32px 150px; 
    background-color: rgba(13, 19, 33, 0.03);
    border-radius: none;
    width: bold;
    height: 90px;
    width: 1200px;
}
.link-b{
    margin-top: 10px;
}

